--- a/octo.html
+++ b/octo.html
@@ -30,6 +30,11 @@
         font-style: italic;
         color: red;
       }
+
+      #userInfo {
+        margin-top: 20px;
+        margin-left: 60px;
+      }
     </style>
   </head>
   <body>
@@ -40,6 +45,14 @@
       <p id="error"></p>
     </form>
     <img src="" id="pfp" alt="" />
+    <div id="userInfo">
+      <p id="user"></p>
+      <p id="name"></p>
+      <p id="bio"></p>
+      <p id="location"></p>
+      <p id="followers"></p>
+      <p id="following"></p>
+    </div>
     <script type="module" src="./OctokitDemo.js">
       //   import { Octokit, App } from "https://cdn.skypack.dev/octokit";
     </script>
